--- a/css/music.css
+++ b/css/music.css
@@ -8,7 +8,7 @@
   cursor: pointer;
   border-radius: 4px;
   font-size: 13px;
-  font-family: 'Oswald', sans-serif;
+  font-family:'Nanum Gothic',monospace;
   line-height: 22px;
   font-weight: bold;
   margin: 0 auto;
