--- a/css/music.css
+++ b/css/music.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Song+Myung&subset=korean');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+
 .toggle_1 {
   background: rgba(0,0,0,0.1);
   width: 75px;
